--- a/pricing-service/src/main/resources/application.properties
+++ b/pricing-service/src/main/resources/application.properties
@@ -13,3 +13,5 @@ eureka.client.service-url.default-zone=http://localhost:8761/eureka/
 eureka.instance.prefer-ip-address=true
 # Credit: "Register Instances Eureka" https://thehecklers.com/post/register-instances-eureka/
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+spring.cloud.config.enabled=false
+
