--- a/eureka-server/pom.xml
+++ b/eureka-server/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.johnngo</groupId>
     <artifactId>eureka-server</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.0.1-SNAPSHOT</version>
     <name>eureka-server</name>
     <description>Eureka Server</description>
 
@@ -125,6 +125,10 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.7.5</version>
+                <configuration>
+                    <mainClass>com.johnngo.eureka.EurekaApplication</mainClass>
+                </configuration>
             </plugin>
         </plugins>
     </build>
